# state_machine_cpp

./: CMakeLists.txt  Doxyfile  README.md  install.sh  main.cpp
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake.yml
builder/: AlgorithmInstance.cpp  AlgorithmInstance.h  Builder.cpp  Builder.h
cmake/: state_machine_cpp-config.cmake.in
context/: AbstractContext.h  Context.h  InitialContext.h
dev/: CMakeLists.txt  dev_main.cpp
docs/: 1_ForLoop.html  1__ForLoop_2CMakeLists_8txt.html  1__ForLoop_8md.html  2__PowerLoop_2CMakeLists_8txt.html  2__PowerLoop_8md.html  3__DoubleLoop_2CMakeLists_8txt.html  3__DoubleLoop_8md.html  4__Organize_8md.html  CMakeLists_8txt.html  Doxyfile  ForLoop-example.html  ForLoop.html  For_01Loop-example.html  Implementing_01a_01simple_01loop-example.html  README_8md.html  Tutorial.html  Tutorial.js  Your.html  ____comparable_8h.html  ____comparable_8h__dep__incl.map  ____comparable_8h__dep__incl.md5  ____comparable_8h_source.html  ____hash_8h.html  ____hash_8h__dep__incl.map  ____hash_8h__dep__incl.md5  ____hash_8h_source.html  ____map_8h.html  ____map_8h__dep__incl.map  ____map_8h__dep__incl.md5  ____map_8h__incl.map  ____map_8h__incl.md5  ____map_8h_source.html  ____pointer_8h.html  ____pointer_8h__dep__incl.map  ____pointer_8h__dep__incl.md5  ____pointer_8h_source.html  ____timer_8h.html  ____timer_8h__dep__incl.map  ____timer_8h__dep__incl.md5  ____timer_8h__incl.map  (+619 more)
docs/html/: README_8md.html  ____comparable_8h.html  ____comparable_8h__dep__incl.map  ____comparable_8h__dep__incl.md5  ____comparable_8h_source.html  ____hash_8h.html  ____hash_8h__dep__incl.map  ____hash_8h__dep__incl.md5  ____hash_8h_source.html  ____map_8h.html  ____map_8h__dep__incl.map  ____map_8h__dep__incl.md5  ____map_8h__incl.map  ____map_8h__incl.md5  ____map_8h_source.html  ____pointer_8h.html  ____pointer_8h__dep__incl.map  ____pointer_8h__dep__incl.md5  ____pointer_8h_source.html  ____unordered__map_8h.html  ____unordered__map_8h__incl.map  ____unordered__map_8h__incl.md5  ____unordered__map_8h_source.html  algorithm_8h.html  algorithm_8h__dep__incl.map  algorithm_8h__dep__incl.md5  algorithm_8h__incl.map  algorithm_8h__incl.md5  algorithm_8h_source.html  annotated_dup.js  basics_8h.html  basics_8h__incl.map  basics_8h__incl.md5  basics_8h_source.html  build_8h.html  build_8h__dep__incl.map  build_8h__dep__incl.md5  build_8h__incl.map  build_8h__incl.md5  build_8h_source.html  (+244 more)
docs/html/search/: all_0.js  all_10.js  all_11.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  files_1.js  files_5.js  files_6.js  files_7.js  functions_1.js  functions_10.js  functions_12.js  functions_2.js  (+14 more)
docs/pages/: main.md
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  enums_0.js  (+70 more)
examples/: CMakeLists.txt
examples/0-version/: CMakeLists.txt
examples/1-for-loop/: CMakeLists.txt  ForLoop_algorithm.h  ForLoop_main.cpp
examples/1_ForLoop/: CMakeLists.txt  example_ForLoop_description.h  example_ForLoop_main.cpp
examples/2-power-loop/: CMakeLists.txt  PowerLoop_main.cpp
examples/2_PowerLoop/: CMakeLists.txt  example_PowerLoop_description.h  example_PowerLoop_main.cpp
examples/3-double-loop/: CMakeLists.txt  DoubleLoop_main.cpp
examples/3_DoubleLoop/: CMakeLists.txt  example_DoubleLoop_description.h  example_DoubleLoop_main.cpp
examples/for-loop/: CMakeLists.txt  _example_ForLoop_main.cpp  _example_for_loop.h
examples/square-loop/: CMakeLists.txt  _example_SquareLoop_main.cpp
examples/version/: CMakeLists.txt  _example_version_main.cpp
install/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  state_machine_cpp-config.cmake
lib/: CMakeLists.txt  main.cpp  version.h.in
lib/include/: AlgorithmInstance.h  Builder.h  Context.h  StateAny.h  StateId.h  StateInstance.h  TransitionAny.h  TransitionHandler.h  __comparable.h  __hash.h  __map.h  __pointer.h  algorithm.h  basics.h  build.h  builder.h  builder_impl_states.h  builder_impl_transitions.h  builder_indirection.h  builder_layers.h  builder_transitions.h  comparable.h  context.h  context_layered.h  context_simple.h  plot.h  run.h  sanity_check.h  state_any.h  state_id.h  state_instance.h  states.h  transition.h  transition_any.h  transitions.h
lib/src/: Builder.cpp  Builder_States.cpp  Builder_Transitions.cpp  TransitionHandler.cpp  __map.cpp  algorithm.cpp  builder.cpp  builder_impl_layers.cpp  builder_impl_states.cpp  builder_impl_transitions.cpp  builder_indirection.cpp  builder_states.cpp  builder_transitions.cpp  plot.cpp  run.cpp  sanity_check.cpp  state.cpp  state_any.cpp  state_id.cpp  state_instance.cpp  states.cpp  states_any.cpp  transition_any.cpp  transition_handlers.cpp  transitions.cpp
pages/: 1_ForLoop.md  2_PowerLoop.md  3_DoubleLoop.md
src/: CMakeLists.txt
src/tutorials/: 1_ForLoop.md  2_PowerLoop.md  3_DoubleLoop.md  4_Organize.md  example_tutorial_main.h
state_machine_cpp/include/: basics.h
states/: StateAny.h  StateId.cpp  StateId.h  StateInstance.cpp  StateInstance.h  constexpr_id.h
tests/: CMakeLists.txt  test_auto_detect.h  test_context.h  test_main.cpp  test_state_create.h  test_state_create_twice.h  test_state_remove.h  test_transition_create.h  test_transition_create_twice.h  test_transition_declare_as_final.h  test_transition_override.h  test_transition_remove.h  test_utils.h
transitions/: TransitionAny.h  TransitionHandler.h  TransitionHandlerAny.h  TransitionHandlerConditional.cpp  TransitionHandlerConditional.h  TransitionHandlerTrivial.cpp
utils/: Pointer.h
(+89 files in other folders)
